# brain-zip-packager

./: .gitignore  .isort.cfg  Makefile  README.md  make-zip  pyproject.toml
base/: info.yaml  overlay.squashfs.rc2  overlay.squashfs.rc3  overlay.squashfs.sr2015.2  overlay.squashfs.sr2015.2-pb-clim  overlay.sr2015.3.squash  overlay.sr2016.1.squash  overlay.sr2017.1.squash  overlay.sr2017.2.squash  overlay.sr2019.3.squash  overlay.sr2020.1.squash  wifi.yaml
