[tool.poetry]
name = "brain-zip-packager"
version = "0.0.0"
description = "This repository creates zip archives for the IDE to serve to users."
authors = ["Student Robotics Brain Team <kit-brain@studentrobotics.org>"]

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-mutable = "*"
flake8-todo = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "^0.14.0"
rope = "*"
isort = {version = "*",extras = ["pyproject"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
